--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "homepage": "https://telegram-mini-apps.github.io/tma-test-project",
+  "homepage": "https://salamjs.github.io/tma-test-project",
   "scripts": {
     "deploy": "gh-pages -d dist",
     "dev": "vite",
